--- a/.gitignore
+++ b/.gitignore
@@ -538,3 +538,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 
 # End of https://www.toptal.com/developers/gitignore/api/rider,csharp,jetbrains+all
+
+
+appsettings.json
