--- a/Currant.Discord/Currant.Discord.csproj
+++ b/Currant.Discord/Currant.Discord.csproj
@@ -13,6 +13,10 @@
       <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01135" />
       <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01135" />
       <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01135" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
